--- a/src/css/site.css
+++ b/src/css/site.css
@@ -4,6 +4,7 @@
 .material-icons.md-36 { font-size: 36px; }
 .material-icons.md-48 { font-size: 48px; }
 
+.not-displayed { display: none; }
 
 #fullPage {
   position: absolute;
@@ -288,7 +289,7 @@ nav.header-menu ul li ul li {
   position: absolute;
   top: 0;
   right: 0;
-  width: 150px;
+  width: 50px;
   height: calc(100% - 4px);
   margin: 2px;
   text-align: right;
@@ -306,10 +307,13 @@ nav.header-menu ul li ul li {
   border-radius: 10px;
 }
 
-.requests-toolbar i:hover {
-  color: #A53;
+.requests-toolbar-delete {
+  color: #D00;
 }
 
+.itrequests {
+  position: relative;
+}
 
 .itrequest {
   display: table;
@@ -334,14 +338,17 @@ nav.header-menu ul li ul li {
 
 .itrequest-due {
   width: 10%;
+  min-width: 95px;
 }
 
 .itrequest-priority {
   width: 7%;
+  min-width: 64px;
 }
 
 .itrequest-age {
   width: 6%;
+  min-width: 54px;
 }
 
 .itrequest-assign {
@@ -355,9 +362,233 @@ nav.header-menu ul li ul li {
 }
 
 
+
+.requests-add {
+  background-color: #388;
+  border-radius: 18px;
+
+  position: absolute;
+  left: 10px;
+  cursor: pointer;
+}
+
+.requests-add-line {
+  background-color: rgba(255, 255, 255, 0.5);
+}
+
+.requests-add-line li {
+  cursor: text;
+}
+
+.requests-add:hover {
+  background-color: #6BB;
+}
+
+.requests-add-toolbar {
+  position: absolute;
+  right: 5px;
+  top: 2px;
+}
+
+.requests-add-close {
+  color: #D00;
+  border-radius: 12px;
+  cursor: pointer;
+}
+
+.requests-add-commit {
+  color: #0D0;
+  border-radius: 12px;
+  cursor: pointer;
+}
+
+.requests-add-due {
+  width: 10%;
+  min-width: 95px;
+  padding: 0;
+}
+
+.requests-add-due input {
+  width: 100%;
+  margin: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  font: inherit;
+  background: none;
+  border: none;
+
+  padding: 2px 0 0 0;
+  text-align: center;
+}
+
+.requests-add-priority {
+  width: 7%;
+  min-width: 64px;
+  padding: 0;
+}
+
+.requests-add-priority select {
+  width: 100%;
+  margin: 2px 0 0 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+
+
+  -moz-appearance: none;
+ -webkit-appearance: none;
+ appearance: none;
+ font: inherit;
+ background: none;
+ border: none;
+ padding-left: 12px;
+}
+
+.requests-add-priority select::-ms-expand {
+    display: none;
+}
+
+.requests-add-desc {
+  width: 62%;
+  text-align: left;
+  padding: 0;
+}
+
+.requests-add-desc textarea {
+  background: none;
+  border: none;
+  resize: none;
+  overflow: hidden;
+  position: absolute;
+  top: 0;
+  left: 0;
+
+  height: 100%;
+  min-height: 30px;
+  width: 100%;
+  margin: 0;
+  font: inherit;
+}
+
+
 .requests-details {
-  height: 88px;
+  height: 30px;
   border: 1px solid black;
+
+  background-color: rgba(255, 255, 255, 0.5);
+  color: #000;
+  font-size: 1.2em;
+  text-align: center;
+}
+
+
+.requests-notes {
+  height: calc( 100vh - 605px);
+}
+
+.requests-notes ul {
+  height: 100%;
+  list-style: none;
+  padding-left: 15px;
+  overflow-y: auto;
+  margin: auto;
+  scrollbar-track-color: #FFF;
+}
+
+.requests-notes-note {
+  background: rgba(255, 255, 255, 0.7);
+  color: #000;
+  border: 2px solid #000;
+  margin: 10px 0px 10px 0px;
+}
+
+.requests-notes-note ul {
+  margin: 0;
+  padding: 0;
+}
+
+.requests-notes-note textarea {
+  background: none;
+  border: none;
+  resize: none;
+  -ms-overflow-style: none;
+  overflow: hidden;
+
+
+  width: 100%;
+  height: 240px;
+  font: inherit;
+}
+
+.requests-notes-note i {
+  cursor: pointer;
+}
+
+.requests-notes-note textarea:focus {
+  border: none;
+  outline: none !important;
+}
+
+.requests-notes-note textarea:active {
+  border: none;
+  outline: none !important;
+}
+
+
+.requests-note-date {
+  background: rgba(165, 200, 255, 0.7);
+  font-weight: bold;
+  padding: 0px 3px 0px 3px;
+  height: 28px;
+  line-height: 28px;
+}
+
+.requests-note-text {
+  padding: 0px 3px 0px 3px;
+}
+
+.requests-notes-add {
+  background-color: #388;
+  border-radius: 18px;
+
+  position: absolute;
+  bottom: 10px;
+  right: 20px;
+  cursor: pointer;
+}
+
+.requests-notes-add:hover {
+  background-color: #6BB;
+}
+
+
+.requests-note-add-commit {
+  width: 100%;
+  text-align: center;
+}
+
+.requests-note-add-commit:hover {
+  color: #7D7;
+}
+
+.requests-note-add-cancel {
+  float: right;
+  padding-top: 1px;
+}
+
+.requests-note-add-cancel:hover {
+  color: #D44;
+}
+
+
+
+
+
+
+.gauge-view-full {
+  height: calc(100vh - 90px);
+  overflow: auto;
 }
 
 
@@ -368,7 +599,18 @@ nav.header-menu ul li ul li {
 
 
 
-.gauge-view-full {
-  height: calc(100vh - 90px);
-  overflow: auto;
+@media screen and (max-height: 665px) {
+
+  .requests-table-header { width: calc( 55vw - 4px); min-width: 736px; margin-left: 4px; }
+  .requests-table-lines { height: calc( 100vh - 166px); max-height: 825px; width: calc( 55vw - 4px); min-width: 736px; margin-left: 4px; }
+  .itrequest { width: calc( 55vw - 4px); min-width: 736px; }
+  .requests-table-lines .full-request-line { width: calc( 55vw - 4px); min-width: 736px; }
+  .requests-details { display:none; width: calc( 55vw - 4px); min-width: 736px; margin-left: 4px; }
+
+  .requests-notes { width: calc( 44vw - 4px); min-width: 500px; height: calc( 100vh - 90px); position: fixed; top: 90px; left: calc( 55vw - 4px ); }
+  .requests-add-priority select { padding-left: 3px; }
+}
+
+@media screen and (min-height: 700px) {
+  .requests-add { bottom: 10px; }
 }
